--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,8 @@ ul {
     right: -300px; /* Initialement hors écran */
     height: 100%;
     width: 250px;
-    background: linear-gradient(135deg, rgb(43, 43, 63), rgb(30, 30, 45));
+    background: linear-gradient(135deg, rgba(43, 43, 63, 255), rgba(30, 30, 45, 0));
+    backdrop-filter: blur(10px);
     color: white;
     box-shadow: -5px 0 15px rgba(0, 0, 0, 0.3); /* Ombre pour donner de la profondeur */
     border-radius: 8px 0 0 8px; /* Arrondi sur la gauche */
