--- a/css/credits.css
+++ b/css/credits.css
@@ -5,8 +5,21 @@
     width: 100%;
 }
 
+@font-face {
+    font-family: 'Lobster';
+    src: url('../assets/fonts/Lobster-Regular.woff2') format('woff2'), 
+         url('../assets/fonts/Lobster-Regular.woff') format('woff'),
+         url('../assets/fonts/Lobster-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
 body {
-    font-family: 'Arial', sans-serif;
+    font-family: 'Lobster', sans-serif;
+}
+
+body {
+    font-family: 'Lobster', sans-serif;
     color: #fff;
     margin: 0;
     padding: 0;
