--- a/css/sea.css
+++ b/css/sea.css
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing: border-box;
   }
-  
+
   body, html {
     height: 100%;
     display: flex;
@@ -11,13 +11,13 @@
     align-items: center;
     background-color: #f0f0f0;
   }
-  
+
   .container {
     position: absolute;
     width: 500px;
     height: 500px;
   }
-  
+
   .body-square {
     position: absolute;
     top: 50%;
@@ -28,7 +28,7 @@
     background-color: transparent;
     overflow: hidden;
   }
-  
+
   .body-square img {
     position: absolute;
     top: 0;
@@ -47,7 +47,7 @@
     background-color: transparent;
     overflow: hidden;
   }
-  
+
   .heart-square img {
     position: absolute;
     top: 0px;
@@ -56,12 +56,52 @@
     height: 200%;
     display: none;
   }
-  
+
   .movable-square {
     position: absolute;
     width: 100px;
     height: 100px;
-    background-color: rgba(180, 250, 250, 0.75);
+    background-color: rgba(180, 250, 250, 0.4);
     cursor: pointer;
+    backdrop-filter: brightness(120%) saturate(120%);
+    border-radius: 3px;
+    border-width: 4px;
+    border-color: #aca6a6;
+    border-style: solid;
   }
-  
+
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(4, 200px);
+  grid-auto-rows: 200px;
+  justify-content: end;
+  grid-gap: 10px;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  padding: 10px;
+}
+
+.grid-item {
+  background-color: white;
+  color: black;
+  width: 200px;
+  height: 200px;
+  border-radius: 3px;
+  padding: 5px;
+}
+
+.grid-item h2 {
+  color: black;
+}
+
+.grid-item:nth-child(1) { grid-column: 3; grid-row: 1; }
+.grid-item:nth-child(2) { grid-column: 3; grid-row: 2; }
+.grid-item:nth-child(3) { grid-column: 3; grid-row: 3; }
+.grid-item:nth-child(4) { grid-column: 2; grid-row: 1; }
+.grid-item:nth-child(5) { grid-column: 2; grid-row: 2; }
+.grid-item:nth-child(6) { grid-column: 2; grid-row: 3; }
+.grid-item:nth-child(7) { grid-column: 4; grid-row: 1; }
+.grid-item:nth-child(8) { grid-column: 4; grid-row: 2; }
+.grid-item:nth-child(9) { grid-column: 4; grid-row: 3; }
