--- a/css/sea.css
+++ b/css/sea.css
@@ -70,24 +70,39 @@
     border-style: solid;
   }
 
+  .main-container {
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+  }
+
+#myCanvas {
+    position: absolute;
+}
+
+.body-container {
+  display: flex;
+  justify-content: center;
+}
 
 .grid-container {
   display: grid;
   grid-template-columns: repeat(4, 200px);
-  grid-auto-rows: 200px;
+  grid-auto-rows: 300px;
   justify-content: end;
   grid-gap: 10px;
   width: 100%;
   height: 100%;
   position: absolute;
   padding: 10px;
+  margin-top: 70%;
 }
 
 .grid-item {
   background-color: white;
   color: black;
   width: 200px;
-  height: 200px;
+  height: 300px;
   border-radius: 3px;
   padding: 5px;
 }
